# OpenGl_Vulkan_With_CMake

./: CMakeLists.txt  CMakeLists_backup.txt  README.md  main.cpp
Assets/Shaders/: fragment_shader_yellow.glsl  vertex_shader.glsl
Dependencies/Libraries/GLFW/Debug/: glfw3.lib
Dependencies/Libraries/GLFW/Release/: glfw3.lib
Dependencies/Sources/: glad.c
Dependencies/Sources/glad/: glad.h
InternalHeaders/: TestHeader.h
InternalSources/: test.hpp
InternalSources/GpuData/: gpu_data.cpp  gpu_data.hpp
InternalSources/Shader/: shader.cpp  shader.hpp
